--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
   }
